[gd_scene load_steps=20 format=3 uid="uid://bmsr6uswcks24"]

[ext_resource type="Texture2D" uid="uid://c08y2pr0ttmxk" path="res://Assets/Environment/EndTree/platform_tree_1.png" id="1_dwjli"]
[ext_resource type="Texture2D" uid="uid://da4g6ai0dvmxr" path="res://Assets/Environment/EndTree/platform_tree_2.png" id="1_gu3y3"]
[ext_resource type="Script" path="res://Objects/end_tree.gd" id="1_mc1vj"]
[ext_resource type="Texture2D" uid="uid://ry8f8qng5c03" path="res://Assets/Environment/Branches/branchshape_round.png" id="2_j8m5n"]
[ext_resource type="Texture2D" uid="uid://cp1nfr2hw63j6" path="res://Assets/Environment/EndTree/platform_tree_6.png" id="3_03pb3"]
[ext_resource type="Texture2D" uid="uid://dvn4mve4qskdj" path="res://Assets/Environment/Branches/moss3.png" id="3_mjert"]
[ext_resource type="Texture2D" uid="uid://ctm25ci2fs86f" path="res://Assets/Environment/Woodsy/branch2.png" id="4_p0juh"]
[ext_resource type="Texture2D" uid="uid://cbvu6jx02bfue" path="res://Assets/Environment/Branches/moss6.png" id="5_gq40w"]
[ext_resource type="Texture2D" uid="uid://d7444hrl20u8" path="res://Assets/Environment/Woodsy/branch1m.png" id="6_18x7b"]
[ext_resource type="Texture2D" uid="uid://cmiotvhp4dedy" path="res://Assets/Environment/Branches/branchshape_lost.png" id="7_aixye"]
[ext_resource type="Texture2D" uid="uid://b14n77up8xmv3" path="res://Assets/Environment/Woodsy/branch2m.png" id="8_1ln04"]
[ext_resource type="Texture2D" uid="uid://8vidvr1dqhei" path="res://Assets/Environment/Branches/moss4.png" id="9_k4xc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ft5p"]
size = Vector2(498, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fevet"]
size = Vector2(944, 66.0001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxp1a"]
size = Vector2(257, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddyqc"]
size = Vector2(233, 13.9656)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hgmug"]
a = Vector2(19, -1064)
b = Vector2(-13, 387)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3xy4v"]
a = Vector2(-1, -385)
b = Vector2(-33, 595)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcvf3"]
size = Vector2(436, 1389.5)

[node name="EndTree" type="StaticBody2D"]
script = ExtResource("1_mc1vj")

[node name="PlatformTree2" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_gu3y3")

[node name="PlatformTree3" type="Sprite2D" parent="."]
position = Vector2(-1, -2130)
scale = Vector2(0.5, -0.5)
texture = ExtResource("1_gu3y3")

[node name="Branches" type="Node2D" parent="."]

[node name="Branch" type="StaticBody2D" parent="Branches" groups=["Landing"]]
position = Vector2(-71, 404)

[node name="BranchshapeRound" type="Sprite2D" parent="Branches/Branch"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_j8m5n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Branches/Branch"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_8ft5p")
one_way_collision = true

[node name="Moss3" type="Sprite2D" parent="Branches/Branch"]
scale = Vector2(0.375, 0.375)
texture = ExtResource("3_mjert")

[node name="Branch2" type="StaticBody2D" parent="Branches" groups=["WallJump"]]
position = Vector2(0, -4)

[node name="Branch2" type="Sprite2D" parent="Branches/Branch2"]
position = Vector2(111, 149)
rotation = -1.5708
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_p0juh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Branches/Branch2"]
position = Vector2(105.25, 150)
rotation = -1.5708
scale = Vector2(0.25, 0.25)
shape = SubResource("RectangleShape2D_fevet")

[node name="Moss6" type="Sprite2D" parent="Branches/Branch2"]
position = Vector2(117, 234)
rotation = -1.5708
scale = Vector2(0.375, 0.375)
texture = ExtResource("5_gq40w")

[node name="Branch4" type="StaticBody2D" parent="Branches" groups=["Landing"]]
position = Vector2(5, -447)

[node name="BranchshapeLost" type="Sprite2D" parent="Branches/Branch4"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_aixye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Branches/Branch4"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_gxp1a")
one_way_collision = true

[node name="Branch5" type="StaticBody2D" parent="Branches" groups=["Landing"]]
position = Vector2(-5, 43)
metadata/_edit_group_ = true

[node name="Branch1m" type="Sprite2D" parent="Branches/Branch5"]
scale = Vector2(0.335366, 0.335366)
texture = ExtResource("6_18x7b")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Branches/Branch5"]
polygon = PackedVector2Array(-61, -30, -54, -31, -49, -29, -38, -27, -10, -14, 7, -10, 16, -8, 30, -12, 48.0676, -10.5546, 80, -8, 93, -5, 107, 0, 13, -3)
one_way_collision = true

[node name="Branch6" type="StaticBody2D" parent="Branches" groups=["Landing"]]
position = Vector2(26, -152)

[node name="Branch2m" type="Sprite2D" parent="Branches/Branch6"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_1ln04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Branches/Branch6"]
visible = false
position = Vector2(0.446764, -7.01581)
rotation = -0.0523599
shape = SubResource("RectangleShape2D_ddyqc")
one_way_collision = true

[node name="Moss4" type="Sprite2D" parent="Branches/Branch6"]
position = Vector2(-64, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_k4xc3")

[node name="Ground" type="StaticBody2D" parent="." groups=["Landing"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
position = Vector2(22, 5)
polygon = PackedVector2Array(-614, 982, -531, 919, -422, 838, -322, 768, -210, 675, -111, 584, 206, 543, 257, 710, 308, 786, 497, 902)

[node name="Walls" type="StaticBody2D" parent="." groups=["WallJump"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(-184, -3)
shape = SubResource("SegmentShape2D_hgmug")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(258, -8)
shape = SubResource("SegmentShape2D_3xy4v")

[node name="PlatformTree1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_dwjli")

[node name="BigGren" type="StaticBody2D" parent="." groups=["Landing"]]
position = Vector2(736, 90)

[node name="PlatformTree6" type="Sprite2D" parent="BigGren"]
modulate = Color(1, 1, 1, 0.588235)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_03pb3")

[node name="PlatformTree7" type="Sprite2D" parent="BigGren"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_03pb3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BigGren"]
visible = false
polygon = PackedVector2Array(-602, -559, -536, -556, -404, -536, -232, -509, -64, -495, 113, -491, 328, -477, 467, -465, 630, -481, 684, -484, 719, -470, 719, -463, 473, -432, 154, -427, -130, -414, -567, -328)

[node name="InTree" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InTree"]
position = Vector2(20, -18.75)
shape = SubResource("RectangleShape2D_gcvf3")

[connection signal="body_entered" from="InTree" to="." method="_on_in_tree_body_entered"]
[connection signal="body_exited" from="InTree" to="." method="_on_in_tree_body_exited"]
